--- a/templates/password_recover_2.html
+++ b/templates/password_recover_2.html
@@ -30,12 +30,13 @@
                                     </button>
                                 </div>
                                 <div class="invalid-feedback">Password must be at least 8 characters long and include uppercase, lowercase, number and special character.</div>
+                            </div>
                                 <div class="mb-3">
-                                    <label for="password" class="form-label">Confirm Password</label>
+                                    <label for="confirmPassword" class="form-label">Confirm Password</label>
                                     <div class="input-group">
-                                        <input type="password" class="form-control" id="password" placeholder="Enter your password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" required>
-                                        <button class="btn btn-outline-secondary" type="button" id="togglePassword">
-                                            <i class="bi bi-eye" id="togglePasswordIcon"></i>
+                                        <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" required>
+                                        <button class="btn btn-outline-secondary" type="button" id="toggleConfirmPassword">
+                                            <i class="bi bi-eye" id="toggleConfirmPasswordIcon"></i>
                                         </button>
                                     </div>
                                     <div class="invalid-feedback">Password must be at least 8 characters long and include uppercase, lowercase, number and special character.</div>
@@ -63,6 +64,20 @@
             // toggle the eye icon
             togglePasswordIcon.classList.toggle('bi-eye');
             togglePasswordIcon.classList.toggle('bi-eye-slash');
+        });
+        
+        
+        const toggleConfirmPassword = document.querySelector('#toggleConfirmPassword');
+        const confirmPassword = document.querySelector('#confirmPassword');
+        const toggleConfirmPasswordIcon = document.querySelector('#toggleConfirmPasswordIcon');
+
+        toggleConfirmPassword.addEventListener('click', function (e) {
+            // toggle the type attribute
+            const type = confirmPassword.getAttribute('type') === 'password' ? 'text' : 'password';
+            confirmPassword.setAttribute('type', type);
+            // toggle the eye icon
+            toggleConfirmPasswordIcon.classList.toggle('bi-eye');
+            toggleConfirmPasswordIcon.classList.toggle('bi-eye-slash');
         });
     </script>
 </body>
