--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 <!-- Center section -->
                 <form class="d-flex justify-content-center flex-grow-1 mx-4" style="max-width: 500px;">
                     <input class="form-control me-2" type="search" placeholder="Search products...">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <a class="btn btn-outline-success" href="/search_companies" type="submit">Search</a>
                 </form>
                 
                 <!-- Right section -->
