--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
                 <!-- Left section -->
                 <div class="d-flex align-items-center">
                     <a href="/" class="nav-link p-0 me-2">
-                        <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Home" height="30">
+                        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
                     </a>
                     <a class="navbar-brand mb-0" href="#">
                         Sustainable Food Supply Chain
