Creazione interfaccia information_company

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -60,7 +60,7 @@
                     <h5>Follow Us</h5>
                     <div class="social-icons">
                         <i class="bi bi-facebook me-2"></i>
-                        <i class="bi bi-twitter me-2"></i>
+                        <i class="bi bi-twitter-x me-2"></i>
                         <i class="bi bi-instagram"></i>
                     </div>
                 </div>
