--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -176,7 +176,7 @@ Country, 12345
 <h5>Follow Us</h5>
 <div class="social-icons">
 <i class="bi bi-facebook me-2"></i>
-<i class="bi bi-twitter me-2"></i>
+<i class="bi bi-twitter-x me-2"></i>
 <i class="bi bi-instagram"></i>
 </div>
 </div>
