--- a/app/templates/search_companies.html
+++ b/app/templates/search_companies.html
@@ -15,13 +15,13 @@
             <div class="col-md-6">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search companies by name" id="searchInput">
-                    <button class="btn btn-primary" type="button">Search</button>
+                    <a class="btn btn-primary" href="/search_companies" type="button">Search</a>
                 </div>
             </div>
         </div>
         <div class="row g-4" id="companyGrid">
             <div class="col-lg-6 col-md-12 mb-4">
-                <div class="card company-card">
+                <a href="/information_company" class="card company-card">
                     <div class="card-img-container">
                         <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab" class="card-img-top company-logo" alt="Company 1"  height="300">
                     </div>
@@ -29,7 +29,7 @@
                         <h5 class="card-title text-truncate">Tech Solutions Inc</h5>
                         <p class="card-text">Leading technology solutions provider</p>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-lg-6 col-md-12 mb-4">
                 <div class="card company-card">
@@ -93,7 +93,7 @@
         <h5>Follow Us</h5>
         <div class="social-icons">
         <i class="bi bi-facebook me-2"></i>
-        <i class="bi bi-twitter me-2"></i>
+        <i class="bi bi-twitter-x me-2"></i>
         <i class="bi bi-instagram"></i>
         </div>
         </div>
