--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
 <div class="carousel-caption">
 <h1>From Farm to Table</h1>
 <p>Connect directly with local food producers</p>
-<button class="btn btn-success btn-lg">Explore Products</button>
+<a class="btn btn-success btn-lg" href="/company_register">Explore Products</a>
 </div>
 </div>
 </div>
