--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -33,7 +33,7 @@
                             </div>
                             <div class="d-grid gap-2">
                                 <a type="submit" class="btn btn-primary" href = "/MFA" >Login</a>
-                                <div class="text-center mt-3"><a href="#" class="text-decoration-none">Forgot your password?</a></div>
+                                <div class="text-center mt-3"><a href="/password_recover" class="text-decoration-none">Forgot your password?</a></div>
                             </div>
                         </form>
                     </div>
