--- a/app/templates/information_company.html
+++ b/app/templates/information_company.html
@@ -9,6 +9,33 @@
     <link rel="stylesheet" href="information_company.css">
 </head>
 <body>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-light navbar-light">
+            <div class="container-fluid px-4">
+                <!-- Left section -->
+                <div class="d-flex align-items-center">
+                    <a href="/" class="nav-link p-0 me-2">
+                        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
+                    </a>
+                    <a class="navbar-brand mb-0" href="/">
+                        Sustainable Food Supply Chain
+                    </a>
+                </div>
+        
+    
+                <!-- Right section -->
+                <div class="d-flex align-items-center">
+                    {% if user_id %}
+                    <a class="btn btn-primary btn-profile ms-2" href="/profile"><i class="bi bi-person-circle"></i></a>
+                    {% else %}
+                    <a class="btn btn-outline-primary ms-2" href="/login">Login</a>
+                    <a class="btn btn-primary ms-2" href="/register">Sign in</a>
+                    {% endif %}
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <header class="py-5 text-center bg-gradient">
         <h1 class="display-3 fw-bold text-black">EcoTech Solutions</h1>
     </header>
