--- a/app/templates/search_companies.html
+++ b/app/templates/search_companies.html
@@ -9,6 +9,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-light navbar-light">
+            <div class="container-fluid px-4">
+                <!-- Left section -->
+                <div class="d-flex align-items-center">
+                    <a href="/" class="nav-link p-0 me-2">
+                        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
+                    </a>
+                    <a class="navbar-brand mb-0" href="/">
+                        Sustainable Food Supply Chain
+                    </a>
+                </div>
+        
+    
+                <!-- Right section -->
+                <div class="d-flex align-items-center">
+                    {% if user_id %}
+                    <a class="btn btn-primary btn-profile ms-2" href="/profile"><i class="bi bi-person-circle"></i></a>
+                    {% else %}
+                    <a class="btn btn-outline-primary ms-2" href="/login">Login</a>
+                    <a class="btn btn-primary ms-2" href="/register">Sign in</a>
+                    {% endif %}
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container py-5">
         <h1 class="text-center mb-5">Company Catalog</h1>
         <div class="row justify-content-center mb-4">
